Summary of important user-visible changes for instrument-control 0.5.0+
-------------------------------------------------------------------

  ** SPI: added new spi object and functions

  ** TCP: 
    added tcpclient, depeciated tcpip

    added methods flush, read, write

Summary of important user-visible changes for instrument-control 0.5.0
-------------------------------------------------------------------

  ** General updates to support Octave 6+

  ** Added common functions
     flushinput
     flushoutput
     instrhelp
 
  ** SERIALPORT: added new serialport object and functions

  ** SERIAL: use extended win32 serial name for comports so > 10 work.

     New serial functions:
        serialbreak

     Added overload functions for: 
        fprintf
        fread
        fwrite

     Added properties:
        port

     Added .property access

  ** UDP: add .property access to the object

     Added properties:
        localhost

     Updates property timeout to be seconds

     Updated udp constructor to be closer to matlab compatible

  ** TCP: add .property access to the object

     Updates property timeout to be seconds

     Updated constructor to be closer to matlab compatible

  ** I2C: 
     Implement object properties 

     Added overload functions for: 
        fread
        fwrite
        get
        set

  ** PARALLEL:
     Added overload functions for: 
        fclose
        fopen
        fread
        fwrite

  ** USBTMC:
     Added overload functions for: 
        fread
        fwrite

  ** VXI11:
     Added overload functions for: 
        fread
        fwrite

  ** insthwinfo: updated to show i2c ports
 
  ** added toolkit manual

Summary of important user-visible changes for instrument-control 0.4.0
-------------------------------------------------------------------

  ** SERIAL: added 'status', 'bytesavailable', 'name' and 'type'
     properties, and the following functions:
        seriallist
        flushinput
        flushoutput
