@@ -8,6 +8,9 @@ Summary of important user-visible changes for instrument-control 0.5.0+
 
     added methods flush, read, write
 
+  ** UDP: 
+    added methods flush, read, write
+
 Summary of important user-visible changes for instrument-control 0.5.0
 -------------------------------------------------------------------
 
